query changes, google analyics added, fix to nav jumping on opacity, consistancy added to js doc

--- a/dev/styles/_footer.scss
+++ b/dev/styles/_footer.scss
@@ -1,14 +1,13 @@
 footer {
-    padding: 1px;
+    padding: 25px 0;
     display: flex;
     justify-content: center;
 }
 
 footer a {
     display: inline-block;
-    padding: 10px 0;
     @include font-size-value(10);
-    transition: 0.4s;
+    transition: $globalTransition;
     &:hover {
         color: $accent;
     }
