--- a/dev/styles/_global.scss
+++ b/dev/styles/_global.scss
@@ -251,7 +251,7 @@ h3 {
     }
 }
 
-@media (max-width: 1305px) { 
+@media (max-width: 1320px) { 
     .wrapper--inner,  .wrapper--inner-no-margin {
     max-width: 70%;
     }
