--- a/dev/styles/_queries.scss
+++ b/dev/styles/_queries.scss
@@ -228,7 +228,7 @@ and (max-device-height: 768px)
 and (orientation: landscape) {
     .top-box--header {
         img {
-            left: 21vw;
+            left: 22vw;
             width: 420px;
             transform: rotate(22deg);
         }
@@ -282,7 +282,17 @@ and (orientation: landscape) {
     }
 }
 
-@media (min-width: 1500px) {
+@media (min-width: 1450px) and (max-height: 770px) {
+     .top-box--header {
+        img {
+            width: 580px;
+            left: 27vw;
+            bottom: 0;
+        }
+    }
+}
+
+@media (min-width: 1560px) {
      .top-box--header {
         img {
             bottom: -2vh;
