--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -324,7 +324,7 @@ h3 {
   .wrapper--inner, .wrapper--inner-no-margin {
     max-width: 78%; } }
 
-@media (max-width: 1305px) {
+@media (max-width: 1320px) {
   .wrapper--inner, .wrapper--inner-no-margin {
     max-width: 70%; } }
 
@@ -354,18 +354,18 @@ h3 {
           transform: translateY(-50%);
   text-align: right;
   position: fixed; }
-  .nav--flex li {
-    height: 35px; }
   .nav--flex a {
     color: #3a3838;
     display: inline-block;
-    padding: 5px 0;
+    padding: 8px 0;
     font-size: 17px;
     font-size: 1.7rem;
     text-transform: uppercase;
     letter-spacing: 0.7px;
     -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease; }
+    transition: all 0.3s ease;
+    -webkit-transform: translate3d(0px, 0px, 0px);
+            transform: translate3d(0px, 0px, 0px); }
     .nav--flex a:hover, .nav--flex a:focus {
       color: #f19032; }
 
@@ -469,7 +469,7 @@ h3 {
 .navOpacity {
   opacity: 0.4; }
 
-@media (min-width: 320px) {
+@media (max-width: 370px) {
   .nav--mobile.open ul {
     left: 30%; } }
 
@@ -793,6 +793,9 @@ h3 {
   .skills--indv-section .skills--indv-section-words p {
     margin: 0; }
 
+.skills--indv-section:nth-of-type(3) .tooltipText {
+  bottom: -70px; }
+
 @media (max-width: 1280px) {
   .skills--indv-section .skills--indv-section-icons {
     top: -45px; }
@@ -917,7 +920,7 @@ form {
       width: 90%; } }
 
 footer {
-  padding: 1px;
+  padding: 25px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -927,11 +930,10 @@ footer {
 
 footer a {
   display: inline-block;
-  padding: 10px 0;
   font-size: 10px;
   font-size: 1rem;
-  -webkit-transition: 0.4s;
-  transition: 0.4s; }
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease; }
   footer a:hover {
     color: #f19032; }
 
@@ -1091,7 +1093,7 @@ footer a {
 
 @media only screen and (min-device-width: 1024px) and (max-device-height: 768px) and (orientation: landscape) {
   .top-box--header img {
-    left: 21vw;
+    left: 22vw;
     width: 420px;
     -webkit-transform: rotate(22deg);
             transform: rotate(22deg); }
@@ -1123,7 +1125,13 @@ footer a {
             transform: rotate(19deg);
     left: 20vw; } }
 
-@media (min-width: 1500px) {
+@media (min-width: 1450px) and (max-height: 770px) {
+  .top-box--header img {
+    width: 580px;
+    left: 27vw;
+    bottom: 0; } }
+
+@media (min-width: 1560px) {
   .top-box--header img {
     bottom: -2vh;
     -webkit-transform: rotate(20deg);
